k8s/overlay/dev/deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ekl-frontend
spec:
  replicas: 1
