k8s/overlay/dev/service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: ekl-frontend
spec:
  selector:
    app: ekl-frontend-dev
